examples/test/testpolicy7024.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7024
  namespace: namespace107
spec:
  podSelector:
    matchLabels:
      key47: value45
      key23: value17
      key27: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value47
          key42: value37
          key30: value42
